force-app/main/default/objects/Billing_Center_Tab_Config__c/Billing_Center_Tab_Config__c.object-meta.xml
<CustomObject>
    <description>Defines each configurable Billing Control Center tab.</description>
    <label>Billing Center Tab Config</label>
    <nameField>
        <displayFormat>BCTAB-{00000}</displayFormat>
        <label>Billing Center Tab Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Center Tab Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>