force-app/main/default/objects/Billing_Center_Tab_Config__c/fields/Apex_Handler_Key__c.field-meta.xml
<CustomField>
    <fullName>Apex_Handler_Key__c</fullName>
    <label>Apex Handler Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>