force-app/main/default/objects/Billing_Center_Tab_Config__c/fields/Default_Date_Filter__c.field-meta.xml
<CustomField>
    <fullName>Default_Date_Filter__c</fullName>
    <label>Default Date Filter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Today</fullName>
            </value>
            <value>
                <fullName>This Week</fullName>
            </value>
            <value>
                <fullName>This Month</fullName>
            </value>
            <value>
                <fullName>This Quarter</fullName>
            </value>
            <value>
                <fullName>This Year</fullName>
            </value>
            <value>
                <fullName>Last Year</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>