force-app/main/default/objects/Billing_Center_Tab_Config__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>