force-app/main/default/objects/Billing_Center_Tab_Config__c/fields/Navigation_Group__c.field-meta.xml
<CustomField>
    <fullName>Navigation_Group__c</fullName>
    <label>Navigation Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>