force-app/main/default/objects/Billing_Center_Tab_Config__c/fields/Navigation_Target_Type__c.field-meta.xml
<CustomField>
    <fullName>Navigation_Target_Type__c</fullName>
    <label>Navigation Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal BCC Tab</fullName>
            </value>
            <value>
                <fullName>Object Home</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>