force-app/main/default/objects/Billing_Center_Tab_Config__c/fields/Required_Custom_Permission__c.field-meta.xml
<CustomField>
    <fullName>Required_Custom_Permission__c</fullName>
    <label>Required Custom Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>