force-app/main/default/objects/Billing_Center_Tab_Config__c/fields/Show_In_Navigation__c.field-meta.xml
<CustomField>
    <fullName>Show_In_Navigation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show In Navigation</label>
    <type>Checkbox</type>
</CustomField>