force-app/main/default/objects/Billing_Center_Tab_Config__c/fields/Target_App_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_App_Developer_Name__c</fullName>
    <label>Target App Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>