force-app/main/default/objects/Billing_Center_Tab_Config__c/fields/Theme_Key__c.field-meta.xml
<CustomField>
    <fullName>Theme_Key__c</fullName>
    <label>Theme Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>