force-app/main/default/objects/Billing_Center_Tab_Config__c/fields/View_Type__c.field-meta.xml
<CustomField>
    <fullName>View_Type__c</fullName>
    <label>View Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Table</fullName>
            </value>
            <value>
                <fullName>Grouped Table</fullName>
            </value>
            <value>
                <fullName>Tabset</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>